--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "name": "The CodeIgniter framework",
     "require": {
-        "bower-asset/bootstrap": "^3.3",
+        "bower-asset/bootstrap": "^4.3.1",
         "npm-asset/jquery": "^2.2",
         "npm-asset/popper.js": "^2.11",
-        "npm-asset/datatables": "^1.10"
+        "npm-asset/datatables": "^1.10",
+        "bower-asset/bootstrap4-dialog-gedmarc": "^4.3",
+        "npm-asset/axios": "^0.24.0"
     },
     "repositories": [
         {
